# taxi_demand_prediction

./: .env.sample  README.md  pyproject.toml
notebooks/: 01_load_and_validate_raw_data.ipynb  06_baseline_model.ipynb  12_feature_pipeline.ipynb  13_model_training_pipeline.ipynb
src/: config.py
