[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Rohit Chandra <rohitv.chandra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.10"
pandas = "^1.5.2"
jupyter = "^1.0.0"
pyarrow = "^10.0.1"
tqdm = "^4.64.1"
plotly = "^5.11.0"
requests = "^2.28.1"
scikit-learn = "^1.3.1"
xgboost = "^2.0.0"
optuna = "^3.4.0"
hopsworks = "^3.4.2"
python-dotenv = "^1.0.0"
streamlit = "^1.27.2"
pydeck = "^0.8.0"
geopandas = "^0.14.0"
discordwebhook = "^1.0.3"
fire = "^0.5.0"
lightgbm = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
watchdog = "^2.2.1"
pip-tools = "^6.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
